# QSpec

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  QSpec.pri  QSpec.pro  README.md  humimit.pri  humimit.pro
examples/calculator/: README.md  button.cpp  button.h  calcguitests.cpp  calcguitests.h  calculator.cpp  calculator.h  calculator.pro  main.cpp
src/: GTGlobals.cpp  GTGlobals.h
src/base_dialogs/: ColorDialogFiller.cpp  ColorDialogFiller.h  DefaultDialogFiller.cpp  DefaultDialogFiller.h  FontDialogFiller.cpp  FontDialogFiller.h  GTFileDialog.cpp  GTFileDialog.h  MessageBoxFiller.cpp  MessageBoxFiller.h
src/core/: CustomScenario.cpp  CustomScenario.h  GUITest.cpp  GUITest.h  GUITestBase.cpp  GUITestBase.h  GUITestOpStatus.h  GUITestsLauncher.cpp  GUITestsLauncher.h  MainThreadRunnable.cpp  MainThreadRunnable.h  MainThreadTimer.cpp  MainThreadTimer.h  TestThread.cpp  TestThread.h  global.h
src/drivers/: GTKeyboardDriver.cpp  GTKeyboardDriver.h  GTKeyboardDriverLinux.cpp  GTKeyboardDriverMac.cpp  GTKeyboardDriverWindows.cpp  GTMouseDriver.cpp  GTMouseDriver.h  GTMouseDriverLinux.cpp  GTMouseDriverMac.cpp  GTMouseDriverWindows.cpp
src/primitives/: GTAction.cpp  GTAction.h  GTCheckBox.cpp  GTCheckBox.h  GTComboBox.cpp  GTComboBox.h  GTDoubleSpinBox.cpp  GTDoubleSpinBox.h  GTGroupBox.cpp  GTGroupBox.h  GTLineEdit.cpp  GTLineEdit.h  GTListWidget.h  (+43 more)
testApp/: EventFilter.cpp  EventFilter.h  EventRecorderWidget.cpp  EventRecorderWidget.h  driversGuiTests.cpp  driversGuiTests.h  main.cpp  mainwindow.cpp  mainwindow.h  systemTests.cpp  systemTests.h  testApp.pro
(+22 files in other folders)
